--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "5.1.*",
         "dingo/api": "0.9.*@dev",
         "pingplusplus/pingpp-php": "dev-master",
-        "tymon/jwt-auth": "0.5.*"
+        "tymon/jwt-auth": "0.5.*",
+        "overtrue/wechat": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
